content/vault/v2.x/content/api-docs/system/tools.mdx
---
layout: api
page_title: /sys/tools - HTTP API
description: This is the API documentation for a general set of crypto  tools.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-15T00:14:12.000Z
last_modified: 2026-04-15T00:14:12.000Z
# END AUTO GENERATED METADATA
---

# `/sys/tools`

The `/sys/tools` endpoints are a general set of tools.

## Generate random bytes

Use the Generate random bytes endpoint to generate high-quality random bytes of
a specified length. You can fetch up to 10MB with the platform source or when
using the DRBG option. To avoid depleting HSM entropy, you can only fetch up to
128KB with seal/all sources using entropy augmentation.

| Method | Path                                   |
| :----- | :------------------------------------- |
| `POST` | `/sys/tools/random(/:source)(/:bytes)` |

### Parameters

- `bytes` `(int: 32)` – Specifies the number of bytes to return. This value can
  be specified either in the request body, or as a part of the URL.

- `format` `(string: "base64")` – Specifies the output encoding. Valid options
  are `hex` or `base64`.

- `source` `(string: "platform")` - Specifies the source of the requested bytes.
  `platform`, the default, sources bytes from the platform's entropy source.
  `seal` sources from entropy augmentation (enterprise only).
  `all` mixes bytes from all available sources.

- `drbg` `(string: "")` - When set to "auto" or "hmacdrbg", seeds a
  [cryptographically secure random generator](https://github.com/hashicorp/go-hmac-drbg)
  with a seed from the chosen source in order to efficiently generate a larger volume of 
  random bytes.  "auto" is equivalent to "hmacdrbg" but in the future may
  select the most appropriate of multiple options.

### Sample payload

```json
{
  "format": "hex"
}
```

### Sample request

```shell-session
$ curl \
    --header "X-Vault-Token: ..." \
    --request POST \
    --data @payload.json \
    http://127.0.0.1:8200/v1/sys/tools/random/164
```

### Sample response

```json
{
  "data": {
    "random_bytes": "dGhlIHF1aWNrIGJyb3duIGZveAo="
  }
}
```

## Hash data

This endpoint returns the cryptographic hash of given data using the specified
algorithm.

| Method | Path                           |
| :----- | :----------------------------- |
| `POST` | `/sys/tools/hash(/:algorithm)` |

### Parameters

- `algorithm` `(string: "sha2-256")` – Specifies the hash algorithm to use. This
  can also be specified as part of the URL. Currently-supported algorithms are:

  - `sha2-224`
  - `sha2-256`
  - `sha2-384`
  - `sha2-512`
  - `sha3-224`
  - `sha3-256`
  - `sha3-384`
  - `sha3-512`

- `input` `(string: <required>)` – Specifies the **base64 encoded** input data.

- `format` `(string: "hex")` – Specifies the output encoding. This can be either
  `hex` or `base64`.

### Sample payload

```json
{
  "input": "adba32=="
}
```

### Sample request

```shell-session
$ curl \
    --header "X-Vault-Token: ..." \
    --request POST \
    --data @payload.json \
    http://127.0.0.1:8200/v1/sys/tools/hash/sha2-512
```

### Sample response

```json
{
  "data": {
    "sum": "dGhlIHF1aWNrIGJyb3duIGZveAo="
  }
}
```
